/*****************************************************************************
 * Copyright (c) 2019-2026, Lev Serebryakov <lev@blacklion.dev>
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * 1. Redistributions of source code must retain the above copyright notice,
 *    this list of conditions and the following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS
 * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,
 * OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
 * OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
 * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
 * IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 * POSSIBILITY OF SUCH DAMAGE.
 ****************************************************************************/
apply plugin: 'java'
// To allow JMH plugin propagate its dependencies to IDEA
apply plugin: 'idea'
apply plugin: 'me.champeau.jmh'
apply plugin: 'application'

repositories {
  mavenCentral()
}

dependencies {
  testImplementation(platform('org.junit:junit-bom:6.0.2'))
  testImplementation('org.junit.jupiter:junit-jupiter')
  testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

test {
  useJUnitPlatform()

  jvmArgs(['--enable-preview'])
  jvmArgs(['--add-modules', 'jdk.incubator.vector'])

  testLogging {
    events "passed", "skipped", "failed"
  }
}

compileJava {
  options.compilerArgs.addAll(['--enable-preview'])
  options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
}

compileTestJava {
  options.compilerArgs.addAll(['--enable-preview'])
  options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
}

compileJmhJava {
  options.compilerArgs.addAll(['--enable-preview'])
  options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
}

application {
  applicationDefaultJvmArgs = ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

jmhRunBytecodeGenerator {
  jvmArgs.addAll(['--enable-preview'])
  jvmArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
}

jmh {
  jvmArgsPrepend = ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
  if (project.hasProperty("benchmarks")) {
    includes = project.property("benchmarks").toString().split("\\s*,\\s*").toList()
  }
}
